crates/service/tests/completion/snapshots/features__completion__ty_decl__after_other_type_defs_in_rec_type.snap
---
source: crates/service/tests/completion/ty_decl.rs
expression: response
---
[
  {
    "label": "type",
    "kind": 14
  }
]
