crates/service/tests/completion/snapshots/features__completion__ty_decl__deprecated.snap
---
source: crates/service/tests/completion/ty_decl.rs
expression: response
---
[
  {
    "label": "0",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "tags": [
      1
    ],
    "sortText": "0"
  },
  {
    "label": "$t",
    "labelDetails": {
      "detail": "(func)"
    },
    "kind": 8,
    "tags": [
      1
    ],
    "sortText": "0"
  }
]
