crates/service/tests/completion/snapshots/features__completion__ty_decl__field_keyword_incomplete.snap
---
source: crates/service/tests/completion/ty_decl.rs
expression: response
---
[
  {
    "label": "field",
    "kind": 14
  }
]
