crates/service/tests/completion/snapshots/features__completion__ty_decl__field_type_with_paren.snap
---
source: crates/service/tests/completion/ty_decl.rs
expression: response
---
[
  {
    "label": "mut",
    "kind": 14
  },
  {
    "label": "ref",
    "kind": 14
  }
]
