crates/service/tests/completion/snapshots/features__completion__ty_decl__final_keyword.snap
---
source: crates/service/tests/completion/ty_decl.rs
expression: response
---
[
  {
    "label": "0",
    "kind": 8,
    "textEdit": {
      "range": {
        "start": {
          "line": 2,
          "character": 15
        },
        "end": {
          "line": 2,
          "character": 16
        }
      },
      "newText": "0"
    }
  },
  {
    "label": "final",
    "kind": 14
  }
]
