crates/service/tests/completion/snapshots/features__completion__ty_decl__func_keyword.snap
---
source: crates/service/tests/completion/ty_decl.rs
expression: response
---
[
  {
    "label": "func",
    "kind": 14
  }
]
