crates/service/tests/completion/snapshots/features__completion__ty_decl__mut_keyword_then_paren.snap
---
source: crates/service/tests/completion/ty_decl.rs
expression: response
---
[
  {
    "label": "ref",
    "kind": 14
  }
]
