crates/service/tests/completion/snapshots/features__completion__ty_decl__param_and_result_incomplete.snap
---
source: crates/service/tests/completion/ty_decl.rs
expression: response
---
[
  {
    "label": "param",
    "kind": 14
  },
  {
    "label": "result",
    "kind": 14
  }
]
